--- a/templates/users.html
+++ b/templates/users.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Total Users{% endblock %}
 {% block content %}
-<h2>Total Users (Last 7 Days)</h2>
+<h2>Active Users</h2>
 <canvas id="userChart"></canvas>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
