--- a/templates/users.html
+++ b/templates/users.html
@@ -23,22 +23,24 @@
     </div>
 
     <div class="stats-row">
-      <div class="stat-box">
-        <p>Total Users</p>
-        <h3>24,582</h3>
-      </div>
-      <div class="stat-box">
-        <p>Bounce Rate</p>
-        <h3>42.3%</h3>
-      </div>
-      <div class="stat-box">
-        <p>New Users</p>
-        <h3>8,649</h3>
-      </div>
-      <div class="stat-box">
-        <p>Avg. Time</p>
-        <h3>3:24</h3>
-      </div>
+  <div class="stat-box">
+    <p>Total Users</p>
+    <h3 id="totalUsers">--</h3>
+  </div>
+  <div class="stat-box">
+    <p>Bounce Rate</p>
+    <h3 id="bounceRate">--</h3>
+  </div>
+  <div class="stat-box">
+    <p>New Users</p>
+    <h3 id="newUsers">--</h3>
+  </div>
+  <div class="stat-box">
+    <p>Avg. Time</p>
+    <h3 id="avgTime">--</h3>
+  </div>
+</div>
+
     </div>
   </div>
 </section>
