--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -7,21 +7,25 @@
   <h1>Welcome to Analytics</h1>
   <p>Get insights into your website's performance with real-time analytics and comprehensive reports.</p>
 
-<div class="card-container">
-  <div class="card">
-    <h4>Users Today</h4>
-    <p class="value" id="usersToday">--</p>
-  </div>
-  <div class="card">
-    <h4>New Users</h4>
-    <p class="value" id="newUsers">--</p>
-  </div>
-  <div class="card">
-    <h4>Avg Session</h4>
-    <p class="value" id="avgSession">--</p>
-  </div>
-</div>
+  <div class="card-container">
+    <div class="card">
+      <h4>Active Users (Last 30 Min)</h4>
+      <p class="value" id="activeUsersLast30Min">--</p>
 
-<script src="{{ url_for('static', filename='js/welcome.js') }}"></script>
+    </div>
 
+    <div class="card">
+      <h4>New Users</h4>
+      <p class="value" id="newUsers">--</p>
+    </div>
+
+    <div class="card">
+      <h4>Avg Session</h4>
+      <p class="value" id="avgSession">--</p>
+    </div>
+  </div>
+</section>
+
+<!-- Script loaded at end for DOM readiness -->
+<script defer src="{{ url_for('static', filename='js/welcome.js') }}"></script>
 {% endblock %}
